[package]
name = "bitwarp-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"

[lib]
doctest = false

[dependencies]
bitwarp-core.workspace = true
bitwarp-protocol.workspace = true
bitwarp-peer.workspace = true
crossbeam-channel.workspace = true
socket2.workspace = true
tracing.workspace = true

[lints]
workspace = true
