[package]
name = "bitwarp-peer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

[lib]
doctest = false

[dependencies]
bitwarp-core.workspace = true
bitwarp-protocol.workspace = true
byteorder.workspace = true
rand.workspace = true
tracing.workspace = true

[lints]
workspace = true

